Handling jwt exception
