# storage/api-docs/api-docs.json
@@ -192,46 +192,65 @@
                 "summary": "Get the logged in user",
                 "description": "Returns current user",
                 "operationId": "getProfile",
-                "requestBody": {
-                    "content": {
-                        "multipart/form-data": {},
-                        "application/json": {
-                            "schema": {}
+                "responses": {
+                    "200": {
+                        "description": "User successfully collects",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user_id": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "user_type_id": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "user_group_id": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "user_surname": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "user_othername": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "user_email": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "user_jobtitle": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "user_phone": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "user_name": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "active": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
                         }
                     }
                 },
-                "responses": {
-                    "201": {
-                        "description": "Register Successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "200": {
-                        "description": "Register Successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
+                "security": [
+                    {
+                        "bearer": []
                     }
-                }
+                ]
             }
         },
         "/api/v1/auth/logout": {
@@ -343,20 +362,45 @@
             }
         }
     },
+    "components": {
+        "responses": {
+            "201": {
+                "description": "User successfully collects",
+                "content": {
+                    "application/json": {
+                        "schema": {}
+                    }
+                }
+            },
+            "422": {
+                "description": "Unprocessable Entity",
+                "content": {
+                    "application/json": {
+                        "schema": {}
+                    }
+                }
+            },
+            "400": {
+                "description": "Bad request"
+            },
+            "404": {
+                "description": "Resource Not Found"
+            }
+        },
+        "securitySchemes": {
+            "bearer": {
+                "type": "http",
+                "description": "Authorization token obtained from logging in.",
+                "name": "Authorization",
+                "in": "header",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
         {
             "name": "Authentification",
             "description": "API Endpoints of Authentification"
         }
-    ],
-    "components": {
-        "securitySchemes": {
-            "Bearer  (http, Bearer)": {
-                "type": "apiKey",
-                "description": "JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\"",
-                "name": "Authorization",
-                "in": "header"
-            }
-        }
-    }
+    ]
 }
